# labs_os

CP/: CMakeLists.txt
CP/doc/: CP.docx
CP/include/: allocator_mckusick.hpp  allocator_pow2.hpp  common.hpp
CP/src/: allocator_mckusick.cpp  allocator_pow2.cpp  main.cpp
CP/tests/: benchmark_allocators.cpp  test_allocators.cpp
lab_os2/include/: matrix_utils.h  median_filter.h
lab_os2/src/: main.cpp  matrix_utils.cpp  median_filter.cpp
lab_os2/tests/: test_matrix.cpp  test_median.cpp
lab_os5-7/include/: Messaging.h
lab_os5-7/src/: NodeManager.cpp
lab_os5-7/tests/: MessagingTests.cpp  NodeManagerTests.cpp
laba1/: CMakeLists.txt  child2.cpp  child2.hpp  main.cpp  parent.cpp  test_utils.cpp  utils.cpp
laba1/doc/: 1.docx
laba1/include/: child1.hpp  parent.hpp  utils.hpp
laba1/src/: child1.cpp
laba2/: CMakeLists.txt  child1.cpp  child1.hpp  child2  child2.cpp  child2.hpp  main.cpp  process_manager.cpp  test_program  test_program.cpp  test_utils  utils.hpp
laba2/docx/: 2.docx
laba3/: CMakeLists.txt  child1  parent.cpp  parent.hpp  utils.cpp
laba4/: CMakeLists.txt  main.cpp  main_dynamic.cpp
laba4/doc/: 4.docx
laba4/include/: rectangle.h  triangle.h
laba4/src/: rectangle.cpp  triangle.cpp
laba4/tests/: test_functions.cpp
laba567/: CMakeLists.txt
laba567/doc/: 567.docx
laba567/include/: ComputeNode.h  NodeManager.h
laba567/src/: ComputeNode.cpp  ComputeNodeProcess.cpp  Messaging.cpp  main.cpp
laba8/: 8.docx
